kuber-homeworks/2.3/files/nginx-2.5-2-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-app
  template:
    metadata:
      labels:
        app: nginx-app
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: website-volume
          mountPath: /usr/share/nginx/html
      volumes:
      - name: website-volume
        configMap:
          name: my-website
