kuber-homeworks/2.3/files/nginx-multitool-2.5-1-nodeport-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-nodeport-service
spec:
  type: NodePort
  selector:
    app: nginx-multitool
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30000
